--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
+html {
+    font-family: IRANSans;
+}
+@font-face {
+    src: url("assets/fonts/IRANSans.ttf");
+    font-family: IRANSans;
+}
 ._1l1hu98 {
     min-width: 360px;
     background-color: #FFF;
@@ -210,7 +217,7 @@
     border-radius: 25px;
     padding: 0 0.75rem;
     vertical-align: top;
-    font-family: OpenSans;
+    font-family: IRANSans;
 }
 ._1bjlpa11 {
     -webkit-box-direction: normal;
@@ -276,13 +283,13 @@
     font-size: 1.25rem;
     line-height: 1.5rem;
     font-weight: bold;
-    font-family: 'OpenSans-Bold', OpenSans, Arial, sans-serif;
+    font-family: IRANSans, sans-serif;
 }
 ._wmgtrl9 {
     font-size: 0.875rem;
     line-height: 1.5rem;
     font-weight: normal;
-    font-family: OpenSans, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: IRANSans, sans-serif;
 }
 ._1rzw47j {
     color: #1F1F1F;
@@ -441,7 +448,7 @@
     font-size: 0.875rem;
     line-height: 1.5rem;
     font-weight: bold;
-    font-family: OpenSans, sans-serif;
+    font-family: IRANSans, sans-serif;
     margin-bottom: 0px;
 }
 @media (max-width: 824px) {
@@ -517,7 +524,7 @@
     font-size: 0.875rem;
     line-height: 1.5rem;
     font-weight: bold;
-    font-family: OpenSans, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: IRANSans, sans-serif;
 }
 @media (min-width: 1041px) {
     ._9cam1z {
@@ -655,7 +662,7 @@
     font-size: 2.125rem;
     line-height: 2.625rem;
     font-weight: normal;
-    font-family: 'OpenSans-Light', OpenSans, Arial, sans-serif;
+    font-family: IRANSans, sans-serif;
 }
 ._1lsrxseu {
     display: -webkit-box;
@@ -853,7 +860,7 @@
     font-size: 3.75rem;
     line-height: 4.5rem;
     font-weight: normal;
-    font-family: 'OpenSans-Light', OpenSans, Arial, sans-serif;
+    font-family: IRANSans, sans-serif;
 }
 ._1tqo7r77 {
     position: relative;
@@ -1041,4 +1048,18 @@
     content: "";
     display: table;
     clear: both;
+}
+._715hnf {
+    position: absolute;
+    top: 40%;
+    left: -40px;
+    z-index: 1;
+    padding: 0px;
+}
+._19v2ukg {
+    position: absolute;
+    top: 40%;
+    right: -40px;
+    z-index: 1;
+    padding: 0px;
 }
